--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/images/hacktoberfest_logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/index.css">
     <title>Contributors22 Hacktoberfest</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="wrapper">
+      <div class="img-area">
+         <div class="inner-area"><img src="./public/images/IMG_0225.jpeg" alt="Maryam Momoh"></div>
+      </div>
+      
+       <p class="name">Maryam Momoh</p>
+       <p class="bio">Frontend developer</p>
+      
+    </div>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
